2003-09-14  Bruno Haible  <bruno@clisp.org>

	* msgfmt.c (check_plural_eval): Mark some strings as c-format.
	(msgfmt_add_message): Make static.
	* po-lex.c (mbfile_getc, control_sequence): Mark some strings as
	c-format.

2003-09-18  Bruno Haible  <bruno@clisp.org>

	* FILES: Update.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	More reliable checking for read errors.
	* po-lex.c (mbfile_getc): Diagnose read errors also in the middle of
	multibyte characters.
	(lex_getc): Diagnose read errors also right after backslash.
	* x-rst.c (extract_rst): Diagnose read errors also inside ConstName
	and immediately after #.

2003-09-14  Bruno Haible  <bruno@clisp.org>

	* write-mo.c: Include fwriterror.h.
	(msgdomain_write_mo): Use fwriteerror, to get right errno value in
	error message about write error.
	* write-po.c: Include fwriterror.h.
	(msgdomain_list_print): Use fwriteerror, to get right errno value in
	error message about write error.
	* write-java.c: Include fwriterror.h.
	(msgdomain_write_java): Use fwriteerror, to get right errno value in
	error message about write error.
	* write-tcl.c: Include fwriterror.h.
	(msgdomain_write_tcl): Use fwriteerror, to get right errno value in
	error message about write error.

2003-09-18  Bruno Haible  <bruno@clisp.org>

	* xgettext.c (from_current_source_encoding): Use multiline_error,
	for a prettier error message.

	* x-perl.c (extract_quotelike_pass1): Store counter_delim instead of
	EOF as delimiter, to avoid error during from_current_source_encoding.
	Reported by Crispin Flowerday <cflowerday@zeus.com>.

2003-09-13  Bruno Haible  <bruno@clisp.org>

	* format-sh.c (INVALID_SHELL_SYNTAX,
	INVALID_CONTEXT_DEPENDENT_VARIABLE): New macros.
	(format_parse): Reject constructs like ${variable-default} and $?.

2003-09-13  Bruno Haible  <bruno@clisp.org>

	Fix behaviour of "<program> --help > /dev/full".
	* hostname.c: Include closeout.h.
	(main): Register close_stdout for execution at program exit.